fix image styles on mobile

--- a/static/pub/style/style.css
+++ b/static/pub/style/style.css
@@ -131,9 +131,15 @@ pre::-webkit-scrollbar, code::-webkit-scrollbar { display: none; }
 .archive-header, .recently-updated-header {margin:  0; border: none;}
 
 @media only screen and (max-width: 600px) {
-  body { font-size: 100% }
-  article { flex-basis:  100%; max-width: 96%; }
-  img { max-width: 100%; }
-  footer > .left { max-width:  40%; font-size: 80%}
-  #cse-search-box-footer-query { width: 60%; }
+    body { font-size: 100% }
+    article { flex-basis:  100%; max-width: 96%; }
+    img { max-width: 100%; }
+    .gallery-image-container, .cdnimg-container, .cdnvid-container {  max-width:  100%; }
+    .gallery-micro {max-width: 50%;}
+    .gallery-small {max-width: 70%;}
+    .gallery-medium {max-width: 80%;}
+    .gallery-large {max-width: 90%;}
+    .gallery-huge {max-width: 100%;}
+    footer > .left { max-width:  40%; font-size: 80%}
+    #cse-search-box-footer-query { width: 60%; }
 }
